[project]
name = "student"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "catboost>=1.2.10",
    "mlflow>=3.14.0",
    "mysql-connector-python>=9.7.0",
    "numpy>=2.5.1",
    "pandas>=2.3.3",
    "pymysql>=1.2.0",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "xgboost>=3.3.0",
]
